# get_next_line

get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c
get_next_line/optignl/: CMakeLists.txt  a.out  ft_strn2join_free_s1.c  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c  main.c
